--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -3,12 +3,12 @@ kind: Ingress
 metadata:
   name: nginx-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: "nginx"
 spec:
   tls:
     - hosts:
         - kesompochy.space
-      secretName: my-tls-secret
+      secretName: kesompochy-space-tls
   rules:
     - host: kesompochy.space
       http:
