--- a/manifests/helmfiles/ingress-nginx/helmfile.yaml
+++ b/manifests/helmfiles/ingress-nginx/helmfile.yaml
@@ -6,10 +6,13 @@ releases:
   - name: nginx-ingress
     namespace: ingress-nginx
     chart: ingress-nginx/ingress-nginx
-    version: 4.1.1
+    version: 4.6.0
     values:
       - controller:
+          config:
+            ssl-port: "30443"
           service:
             type: NodePort
             nodePorts:
               http: 30080
+              https: 30443
