--- a/manifests/kesompochy-space.yaml
+++ b/manifests/kesompochy-space.yaml
@@ -69,7 +69,13 @@ metadata:
   name: kesompochy-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: "kesompochy-clusterissuer"
 spec:
+  tls:
+    - hosts:
+        - kesompochy.space
+      secretName: tls
+  ingressClassName: nginx
   rules:
     - host: kesompochy.space
       http:
@@ -81,12 +87,19 @@ spec:
                 name: nginx-service
                 port:
                   number: 80
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: nginx-service
-                port:
-                  number: 80
+
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: kesompochy-clusterissuer
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: kesompochy@gmail.com
+    privateKeySecretRef:
+      name: tls
+    solvers:
+      - http01:
+          ingress:
+            class: nginx
