fix kesompochy-space application path

--- a/manifests/argocd-config/kesompochy-space.yaml
+++ b/manifests/argocd-config/kesompochy-space.yaml
@@ -11,7 +11,7 @@ spec:
   source:
     repoURL: https://github.com/kesompochy/kesompochy-space
     targetRevision: HEAD
-    path: manifests/kesompochy-space.yaml
+    path: manifests/kesompochy-space
   syncPolicy:
     automated:
       prune: true
