--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "manifests/helmfiles/**"
+    #paths:
+    #  - "manifests/helmfiles/**"
 
 jobs:
   generate-helmfile-template:
