add github token before push

--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -38,4 +38,5 @@ jobs:
           git config --local user.name "GitHub Actions Bot"
           git add manifests/helmfiles/helmfile-template.yaml
           git commit -m "Update helmfile-template.yaml" || true
+          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/kesompochy/kesompochy-space.git
           git push origin main
