--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Set up Helm
         uses: azure/setup-helm@v3
