--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -35,10 +35,12 @@ jobs:
           helmfile template > helmfile-template.yaml
 
       - name: Commit helmfile-template.yaml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions Bot"
           git add manifests/helmfiles/helmfile-template.yaml
           git commit -m "Update helmfile-template.yaml" || true
-          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/kesompochy/kesompochy-space.git
+          git remote set-url origin https://${GITHUB_TOKEN}@github.com/kesompochy/kesompochy-space.git
           git push origin main
