--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -41,6 +41,5 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions Bot"
           git add manifests/helmfiles/helmfile-template.yaml
-          git commit -m "Update helmfile-template.yaml" || true
-          git remote set-url origin https://github.com/kesompochy/kesompochy-space.git
-          git push -f origin main
+          git commit -m "Update helmfile-template.yaml [skip ci]"
+          git push
