--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -36,11 +36,11 @@ jobs:
 
       - name: Commit helmfile-template.yaml
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS__TOKEN }}
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions Bot"
-          git remote set-url origin https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          git remote set-url origin https://${PERSONAL_ACCESS_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git add manifests/helmfiles/helmfile-template.yaml
           git diff --quiet && git diff --staged --quiet || git commit -m "Update helmfile-template.yaml [skip ci]"
           git push
