--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -40,7 +40,7 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions Bot"
-          git remote set-url origin https://${PERSONAL_ACCESS_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          git remote set-url origin https://$PERSONAL_ACCESS_TOKEN@github.com/${GITHUB_REPOSITORY}.git
           git add manifests/helmfiles/helmfile-template.yaml
           git diff --quiet && git diff --staged --quiet || git commit -m "Update helmfile-template.yaml [skip ci]"
           git push
