create release branch as a release branch

--- a/manifests/argocd-config/argocd-config.yaml
+++ b/manifests/argocd-config/argocd-config.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/kesompochy/kesompochy-space
-    targetRevision: HEAD
+    targetRevision: release
     path: manifests/argocd-config
   syncPolicy:
     automated:
