--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -32,15 +32,18 @@ jobs:
       - name: Generate Helmfile template
         run: |
           cd manifests/helmfiles
-          helmfile template > helmfile-template.yaml
+          helmfile template > dumped_helmfiletemplate.yaml
 
       - name: Commit helmfile-template.yaml
+        env:
+          - PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions Bot"
-          git remote set-url origin https://$PERSONAL_ACCESS_TOKEN@github.com/${GITHUB_REPOSITORY}.git
+          git switch release
           git add manifests/helmfiles/helmfile-template.yaml
           git diff --quiet && git diff --staged --quiet || git commit -m "Update helmfile-template.yaml [skip ci]"
+          git push origin release --force
 
       - name: Push changes
         uses: ad-m/github-push-action@master
