--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -6,6 +6,7 @@ on:
       - main
     #paths:
     #  - "manifests/helmfiles/**"
+  workflow_dispatch:
 
 jobs:
   generate-helmfile-template:
@@ -44,9 +45,3 @@ jobs:
           git add manifests/helmfiles/helmfile-template.yaml
           git diff --quiet && git diff --staged --quiet || git commit -m "Update helmfile-template.yaml [skip ci]"
           git push origin release --force
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          branch: ${{ github.ref }}
