--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-    #paths:
-    #  - "manifests/helmfiles/**"
   workflow_dispatch:
 
 jobs:
@@ -39,7 +37,7 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "GitHub Actions Bot"
-          git switch release
+          git switch -c release
           git merge main
           git add manifests/helmfiles/helmfile-template.yaml
           git diff --quiet && git diff --staged --quiet || git commit -m "Update helmfile-template.yaml [skip ci]"
