--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -39,6 +39,6 @@ jobs:
           git config --local user.name "GitHub Actions Bot"
           git switch -c release
           git merge main
-          git add manifests/helmfiles/helmfile-template.yaml
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update helmfile-template.yaml [skip ci]"
+          git add manifests/helmfiles/dumped_helmfile_template.yaml
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update dumped_helmfile_template.yaml [skip ci]"
           git push origin release --force
