add auth in registry

--- a/manifests/kesompochy-space/kesompochy-space.yaml
+++ b/manifests/kesompochy-space/kesompochy-space.yaml
@@ -22,6 +22,8 @@ spec:
           volumeMounts:
             - name: html
               mountPath: /usr/share/nginx/html
+          imagePullSecrets:
+            - name: registry-auth-secret
       volumes:
         - name: html
           configMap:
