--- a/.github/workflows/dump_helmfile_template.yaml
+++ b/.github/workflows/dump_helmfile_template.yaml
@@ -1,4 +1,4 @@
-name: Helmfile Template
+name: Release
 
 on:
   push:
@@ -24,23 +24,24 @@ jobs:
         with:
           version: "latest"
 
-      - name: Set up Helmfile
+      - name: Git config
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "GitHub Actions Bot"
+
+      - name: Generate Helmfile template
+        if: "contains(github.event.head_commit.modified, 'manifests/helmfiles')"
         run: |
           VERSION=$(curl --silent https://api.github.com/repos/roboll/helmfile/releases/latest | jq '.tag_name' | sed 's/v//; s/"//g')
           wget https://github.com/roboll/helmfile/releases/download/v${VERSION}/helmfile_linux_amd64
           sudo mv helmfile_linux_amd64 /usr/local/bin/helmfile
           sudo chmod +x /usr/local/bin/helmfile
-
-      - name: Generate Helmfile template
-        run: |
           cd manifests/helmfiles
           helmfile template > dumped_helmfile_template.yaml
+          git add manifests/helmfiles/dumped_helmfile_template.yaml
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update dumped_helmfile_template.yaml [skip ci]"
 
       - name: Commit helmfile-template.yaml
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "GitHub Actions Bot"
           git switch -c release
-          git add manifests/helmfiles/dumped_helmfile_template.yaml
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update dumped_helmfile_template.yaml [skip ci]"
           git push origin release --force
