--- a/manifests/registry/registry.yaml
+++ b/manifests/registry/registry.yaml
@@ -57,6 +57,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/issuer: "containers-letsencrypt"
 spec:
+  ingressClassName: nginx
   tls:
     - hosts:
         - containers.kesompochy.space
@@ -81,6 +82,7 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
+    email: kesompochy@gmail.com
     privateKeySecretRef:
       name: containers-kesompochy-tls
     solvers:
