--- a/manifests/registry/registry.yaml
+++ b/manifests/registry/registry.yaml
@@ -56,7 +56,7 @@ metadata:
   name: private-registry
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/issuer: "containers-letsencrypt"
+    cert-manager.io/cluster-issuer: "containers-letsencrypt"
 spec:
   ingressClassName: nginx
   tls:
@@ -64,7 +64,7 @@ spec:
         - containers.kesompochy.space
       secretName: containers-kesompochy-tls
   rules:
-    - hots: containers.kesompochy.space
+    - host: containers.kesompochy.space
       http:
         paths:
           - path: /
