--- a/manifests/kesompochy-space/kesompochy-space.yaml
+++ b/manifests/kesompochy-space/kesompochy-space.yaml
@@ -22,8 +22,10 @@ spec:
           volumeMounts:
             - name: html
               mountPath: /usr/share/nginx/html
-          imagePullSecrets:
-            - name: registry-auth-secret
+        - name: kesompochy-space
+          image: kesompochy-space-app:latest
+      imagePullSecrets:
+        - name: containers-kesompochy-space-credentials
       volumes:
         - name: html
           configMap:
