--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,10 +8,31 @@ on:
       - app/**
   workflow_dispatch:
 
-- name: Login to private registry
-  run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login containers.kesompochy.space -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin
+jobs:
+  build_and_push:
+    runs-on: ubuntu-latest
 
-- name: Push Docker image
-  run: |
-    docker tag my-image containers.kesompochy.space/kesompochy-space-app:${{ github.sha }}
-    docker push containers.kesompochy.space/kesompochy-space-app:${{ github.sha }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: containers.kesompochy.space
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: cd
+        run: |
+          cd app
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: containers.kesompochy.space/your-image-name:latest
