--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,4 @@
 name: Build
-
 on:
   push:
     branches:
@@ -7,7 +6,6 @@ on:
     paths:
       - app/**
   workflow_dispatch:
-
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
@@ -35,4 +33,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: containers.kesompochy.space/your-image-name:latest
+          tags: containers.kesompochy.space/kesompochy-space-app:latest
