--- a/manifests/kesompochy-space/kesompochy-space.yaml
+++ b/manifests/kesompochy-space/kesompochy-space.yaml
@@ -15,6 +15,11 @@ spec:
         app: nginx
     spec:
       containers:
+        - name: kesompochy-space
+          image: containers.kesompochy.space/kesompochy-space-app:latest
+          imagePullPolicy: Always
+          livenessProbe:
+            initialDelaySeconds: 120
         - name: nginx
           image: nginx:latest
           ports:
@@ -22,8 +27,6 @@ spec:
           volumeMounts:
             - name: html
               mountPath: /usr/share/nginx/html
-        - name: kesompochy-space
-          image: containers.kesompochy.space/kesompochy-space-app:latest
       imagePullSecrets:
         - name: containers-kesompochy-space-credentials
       volumes:
