--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,10 +15,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: cd
-        run: |
-          cd app
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -32,6 +28,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./app
           push: true
           tags: containers.kesompochy.space/kesompochy-space-app:latest
