--- a/manifests/argocd-config/kesompochy-space.yaml
+++ b/manifests/argocd-config/kesompochy-space.yaml
@@ -19,3 +19,8 @@ spec:
     syncOptions:
       - Validate=false
       - CreateNamespace=true
+      allowEmpty: true # 追加
+      imageUpdaters: # 追加
+        - containerNames: ["nginx", "kesompochy-space"] # 対象となるコンテナの名前を指定
+          autoUpdate:
+            schedule: "* * * * *" # 自動更新のスケジュールを指定
