--- a/manifests/kesompochy-space/kesompochy-space.yaml
+++ b/manifests/kesompochy-space/kesompochy-space.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: kesompochy-space
           image: containers.kesompochy.space/kesompochy-space-app:latest
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
 
