--- a/manifests/argocd-config/argocd-image-updater.yaml
+++ b/manifests/argocd-config/argocd-image-updater.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: crds
+  name: argocd-image-updater
   namespace: argocd
 spec:
   destination:
