--- a/manifests/argocd-image-updater/install.yaml
+++ b/manifests/argocd-image-updater/install.yaml
@@ -1,4 +1,9 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: argocd-image-updater
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
