--- a/manifests/argocd-image-updater/install.yaml
+++ b/manifests/argocd-image-updater/install.yaml
@@ -170,6 +170,8 @@ spec:
                   key: kube.events
                   name: argocd-image-updater-config
                   optional: true
+            - name: REGISTRY_CREDS_SECRET
+              value: my-private-registry-credentials
           image: quay.io/argoprojlabs/argocd-image-updater:v0.12.0
           imagePullPolicy: Always
           livenessProbe:
