--- a/manifests/argocd-config/kesompochy-space.yaml
+++ b/manifests/argocd-config/kesompochy-space.yaml
@@ -3,7 +3,7 @@ kind: Application
 metadata:
   name: kesompochy-space
   namespace: argocd
-  annotaions:
+  annotations:
     argocd-image-updater.argoproj.io/write-back-method: argocd
     argocd-image-updater.argoproj.io/image-list: kesompochy-space-app=containers.kesompochy.space/kesompochy-space-app:latest
     argocd-image-updater.argoproj.io/my-image.update-strategy: latest
