--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Build-and-Push-and-Commit
 on:
   push:
     branches:
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -25,9 +27,39 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Get current version
+        id: get_version
+        run: |
+          CURRENT_VERSION=$(git describe --tags --abbrev=0)
+          echo "Current version: $CURRENT_VERSION"
+          echo "::set-output name=CURRENT_VERSION::$CURRENT_VERSION"
+
+      - name: Bump patch version
+        id: bump_version
+        run: |
+          CURRENT_VERSION="${{ steps.get_version.outputs.CURRENT_VERSION }}"
+          PATCH_VERSION=$(echo $CURRENT_VERSION | awk -F. '{print $3}')
+          NEW_PATCH_VERSION=$((PATCH_VERSION + 1))
+          NEW_VERSION=$(echo $CURRENT_VERSION | sed "s/\.[0-9]*$/.${NEW_PATCH_VERSION}/")
+          echo "New version: $NEW_VERSION"
+          echo "::set-output name=NEW_VERSION::$NEW_VERSION"
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: ./app
           push: true
           tags: containers.kesompochy.space/kesompochy-space-app:latest
+
+      - name: Update Deployment and Application manifests
+        run: |
+          NEW_VERSION="${{ steps.bump_version.outputs.NEW_VERSION }}"
+          sed -i "s/kesompochy-space-app:v[0-9]*\.[0-9]*\.[0-9]*/kesompochy-space-app:$NEW_VERSION/g" manifests/kesompochy-space/kesompochy-space.yaml
+
+      - name: Commit and push changes
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "actions@github.com"
+          git add manifests/kesompochy-space/kesompochy-space.yaml
+          git commit -m "Update image tag to ${{ steps.bump_version.outputs.NEW_VERSION }}"
+          git push
