--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,9 @@ jobs:
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
+      - name: Fetch Git tags
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
