--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,11 @@ jobs:
       - name: Get current version
         id: get_version
         run: |
-          CURRENT_VERSION=$(git describe --tags --abbrev=0)
+          if git describe --tags --abbrev=0 >/dev/null 2>&1; then
+            CURRENT_VERSION=$(git describe --tags --abbrev=0)
+          else
+            CURRENT_VERSION="1.0.0"
+          fi
           echo "Current version: $CURRENT_VERSION"
           echo "::set-output name=CURRENT_VERSION::$CURRENT_VERSION"
 
