--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,7 +56,9 @@ jobs:
         with:
           context: ./app
           push: true
-          tags: containers.kesompochy.space/kesompochy-space-app:latest
+          tags: |
+            containers.kesompochy.space/kesompochy-space-app:latest
+            containers.kesompochy.space/kesompochy-space-app:${{ steps.bump_version.outputs.NEW_VERSION }}
 
       - name: Update Deployment and Application manifests
         run: |
@@ -69,4 +71,6 @@ jobs:
           git config user.email "actions@github.com"
           git add manifests/kesompochy-space/kesompochy-space.yaml
           git commit -m "Update image tag to ${{ steps.bump_version.outputs.NEW_VERSION }}"
+          git tag ${{ steps.bump_version.outputs.NEW_VERSION }}
+          git push --tags
           git push
