--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,7 +64,7 @@ jobs:
       - name: Update Deployment and Application manifests
         run: |
           NEW_VERSION="${{ steps.bump_version.outputs.NEW_VERSION }}"
-          sed -i "s/kesompochy-space-app:v[0-9]*\.[0-9]*\.[0-9]*/kesompochy-space-app:$NEW_VERSION/g" manifests/kesompochy-space/kesompochy-space.yaml
+          sed -i "s/containers\.kesompochy\.space\/kesompochy-space-app:v[0-9]*\.[0-9]*\.[0-9]*/containers.kesompochy.space/kesompochy-space-app:$NEW_VERSION/g" manifests/kesompochy-space/kesompochy-space.yaml
           cat manifests/kesompochy-space/kesompochy-space.yaml
 
       - name: Commit and push changes
