--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -77,4 +77,6 @@ jobs:
           git commit -m "Update image tag to ${{ steps.bump_version.outputs.NEW_VERSION }}"
           git tag ${{ steps.bump_version.outputs.NEW_VERSION }}
           git push origin --tags
-          git push origin main
+          git switch -c release
+          git pull origin release
+          git push origin release --force
