--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,11 +36,7 @@ jobs:
       - name: Get current version
         id: get_version
         run: |
-          if git describe --tags --abbrev=0 >/dev/null 2>&1; then
-            CURRENT_VERSION=$(git describe --tags --abbrev=0)
-          else
-            CURRENT_VERSION="1.0.0"
-          fi
+          CURRENT_VERSION=$(git tag --sort=-version:refname | head -n 1)
           echo "Current version: $CURRENT_VERSION"
           echo "::set-output name=CURRENT_VERSION::$CURRENT_VERSION"
 
