--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,9 +6,7 @@ on:
       - main
     paths:
       - manifests/**
-    paths-ignore:
-      - manifests/helmfiles/**
-      - app/**
+      - !manifests/helmfiles/**
   workflow_run:
     workflows: ["Build-and-Push", "Dump-Helmfile-Template"]
     types:
@@ -35,14 +33,11 @@ jobs:
           git switch release
           if git rev-parse --verify temp-build; then
             git merge --no-ff --allow-unrelated-histories temp-build -m "Merge build changes"
+            git push origin --delete temp-build || echo "temp-build branch not found"
           fi
           if git rev-parse --verify temp-dump; then
             git merge --no-ff --allow-unrelated-histories temp-dump -m "Merge dump changes"
+            git push origin --delete temp-dump || echo "temp-dump branch not found"
           fi
           git merge main --no-ff -m "Release changes"
           git push origin release
-
-      - name: Cleanup temporary branches
-        run: |
-          git push origin --delete temp-build || echo "temp-build branch not found"
-          git push origin --delete temp-dump || echo "temp-dump branch not found"
